# fraud_detection_streamlit

./: README.md  app.py  data.py  pyproject.toml  requirements.txt
