[tool.poetry]
name = "synthetic-tx-dashboard-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.3"
Faker = "^18.2.0"
streamlit = "^1.20.0"
plotly = "^5.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"